--- a/www/board.html
+++ b/www/board.html
@@ -56,31 +56,13 @@
     </div>
 
     </main>
-<footer>
-    <div class="container-fluid bg-secondary">
-      <div class="row col-12">
+    <footer>
+      <div class="container-fluid">
+      <div class="footer-content">
 
-        <div class="col-12 col-md-4 mt-2">
-          <p>Adress:</p>
-          <p>Kungsgatan 88</p>
-          <p>Malmö, Sweden</p>
         </div>
-
-        <div class="col-12 col-md-4 mt-2">
-          <p>http://www.fourinalinegame.se</p>
-          <p>email: info@fourinalinegame.se</p>
-          <p>email: anja@fourinalinegame.se</p>
-        </div>
-
-        <div class="col-12 col-md-4 mt-2">
-          <p>Kontakt: Anna Karlsson</p>
-          <p>Telefon: +46(0)123456789</p>
-          <p>Mobil: +46(0)123456789</p>
-        </div>
-
       </div>
-    </div>
-  </footer>
+    </footer>
 
 
     <!-- JavaScript libraries -->
@@ -92,6 +74,7 @@
     <!-- Application specific JavaScript -->
     <script src="/js/classes/base.class.js"></script>
     <script src="/js/classes/frontpage.class.js"></script>
+    <script src="/js/classes/footer.class.js"></script>
     <script src="/js/classes/rulespage.class.js"></script>
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
