--- a/www/index.html
+++ b/www/index.html
@@ -2,104 +2,91 @@
 <html lang="sv">
 
 
-<head>
-  <title>4 i rad</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <title>4 i rad</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-  <!-- Application specific CSS -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/main.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+    <!-- Application specific CSS -->
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-</head>
+  </head>
 
-<body>
-  <header>
-    <div class="container-fluid p-0">
-      <div class="row">
-        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-          <h1>4 i rad</h1>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ml-5" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active pl-5">
-                <a class="nav-link" href="/">Start
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="spel.html">Spela</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="rules.html">Spelregler</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="hiscore.html">HiScore</a>
-              </li>
-            </ul>
+  <body>
+    <header>
+      <div class="container-fluid p-0">
+        <div class="row">
+          <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+            <h1>4 i rad</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ml-5" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active pl-5">
+                  <a class="nav-link" href="/">Start
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="spel.html">Spela</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="rules.html">Spelregler</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="hiscore.html">HiScore</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <main class="start-page">
+      <article>
+
+        <section class="container">
+          <div class="frontpagecontent">
+
           </div>
-        </nav>
+        </section>
+
+      </article>
+
+    </main>
+
+    <footer>
+      <div class="container-fluid">
+      <div class="footer-content">
+
+        </div>
       </div>
-    </div>
-  </header>
-
-  <main class="start-page">
-    <article>
-      <section class="container">
-        <div class="frontpagecontent">
-          
-        </div>
-      </section>
-    </article>
-  </main>
-  <footer>
-    <div class="container-fluid bg-secondary">
-      <div class="row col-12">
-
-        <div class="col-12 col-md-4 mt-2">
-          <p>Adress:</p>
-          <p>Kungsgatan 88</p>
-          <p>Malmö, Sweden</p>
-        </div>
-
-        <div class="col-12 col-md-4 mt-2">
-          <p>http://www.fourinalinegame.se</p>
-          <p>email: info@fourinalinegame.se</p>
-          <p>email: anja@fourinalinegame.se</p>
-        </div>
-
-        <div class="col-12 col-md-4 mt-2">
-          <p>Kontakt: Anna Karlsson</p>
-          <p>Telefon: +46(0)123456789</p>
-          <p>Mobil: +46(0)123456789</p>
-        </div>
-
-      </div>
-    </div>
-  </footer>
+    </footer>
 
 
-  <!-- JavaScript libraries -->
-  <script src="/jsonflex.js"></script>
-  <script src="/js/libs/jquery-3.2.1.js"></script>
-  <script src="/js/libs/popper-1.11.0.js"></script>
-  <script src="/js/libs/bootstrap-4-beta.js"></script>
-  <!-- Application specific JavaScript -->
-  <!-- Application specific JavaScript -->
-  <script src="/js/classes/base.class.js"></script>
-  <script src="/js/classes/frontpage.class.js"></script>
-  <script src="/js/classes/rulespage.class.js"></script>
-  <script src="/js/classes/player.class.js"></script>
-  <script src="/js/classes/game.class.js"></script>
-  <script src="/js/classes/board.class.js"></script>
-  <script src="/js/classes/hiscore.class.js"></script>
-  <script src="/js/classes/app.class.js"></script>
-  <script src="/js/main.js"></script>
-</body>
+    <!-- JavaScript libraries -->
+    <script src="/jsonflex.js"></script>
+    <script src="/js/libs/jquery-3.2.1.js"></script>
+    <script src="/js/libs/popper-1.11.0.js"></script>
+    <script src="/js/libs/bootstrap-4-beta.js"></script>
+    <!-- Application specific JavaScript -->
+    <!-- Application specific JavaScript -->
+    <script src="/js/classes/base.class.js"></script>
+    <script src="/js/classes/frontpage.class.js"></script>
+    <script src="/js/classes/footer.class.js"></script>
+    <script src="/js/classes/rulespage.class.js"></script>
+    <script src="/js/classes/player.class.js"></script>
+    <script src="/js/classes/game.class.js"></script>
+    <script src="/js/classes/board.class.js"></script>
+    <script src="/js/classes/hiscore.class.js"></script>
+    <script src="/js/classes/app.class.js"></script>
+    <script src="/js/main.js"></script>
+  </body>
 
 </html>
