--- a/www/rules.html
+++ b/www/rules.html
@@ -50,35 +50,17 @@
 
 	<main class="rules container my-5">
 		<div class="rulespagecontent">
-			
+
 		</div>
 	</main>
 
 	<footer>
-    <div class="container-fluid bg-secondary">
-      <div class="row col-12">
-
-				<div class="col-12 col-md-4 mt-2">
-					<p>Adress:</p>
-					<p>Kungsgatan 88</p>
-					<p>Malmö, Sweden</p>
-				</div>
-
-				<div class="col-12 col-md-4 mt-2">
-					<p>http://www.fourinalinegame.se</p>
-					<p>email: info@fourinalinegame.se</p>
-					<p>email: anja@fourinalinegame.se</p>
-				</div>
-
-				<div class="col-12 col-md-4 mt-2">
-					<p>Kontakt: Anna Karlsson</p>
-					<p>Telefon: +46(0)123456789</p>
-					<p>Mobil: +46(0)123456789</p>
-				</div>
+    <div class="container-fluid">
+    <div class="footer-content">
 
       </div>
     </div>
-	</footer>
+  </footer>
 
 
 	<!-- JavaScript libraries -->
@@ -89,6 +71,7 @@
 	<!-- Application specific JavaScript -->
 	<script src="/js/classes/base.class.js"></script>
 	<script src="/js/classes/frontpage.class.js"></script>
+	<script src="/js/classes/footer.class.js"></script>
 	<script src="/js/classes/rulespage.class.js"></script>
 	<script src="/js/classes/player.class.js"></script>
 	<script src="/js/classes/board.class.js"></script>
