--- a/www/spel.html
+++ b/www/spel.html
@@ -1,141 +1,125 @@
 <!DOCTYPE html>
 <html lang="sv">
 
-<head>
-  <title>4 i rad</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <title>4 i rad</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-  <!-- Application specific CSS -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/main.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+    <!-- Application specific CSS -->
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-</head>
+  </head>
 
-<body>
-  <header>
-    <div class="container-fluid p-0">
-      <div class="row">
-        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-          <h1>4 i rad</h1>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ml-5" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="/">Start
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link active" href="spel.html">Spela</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="rules.html">Spelregler</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="hiscore.html">HiScore</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+  <body>
+    <header>
+      <div class="container-fluid p-0">
+        <div class="row">
+          <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+            <h1>4 i rad</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ml-5" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="/">Start
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link active" href="spel.html">Spela</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="rules.html">Spelregler</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="hiscore.html">HiScore</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
 
-  <main>
-    <article>
-      <section class="container">
-        <!--Spelare 1 -->
-        <div class="row mt-4">
-          <h3 class="col-12 col-md-8 col-lg-8 mx-auto">Spelare 1</h3>
-        </div>
-        <div class="row mt-2">
-          <div class="col-12 col-md-8 col-lg-8 mx-auto d-inline-flex">
-            <div class="col-10 m-0 p-0">
-              <input type="text" class="form-control" id="playerName1" aria-label="Spelare namn" placeholder="Spelare Namn">
-            </div>
-            <div class="col-2">
-              <select class="form-control" id="type1">
-                <option>Human</option>
-                <option>Robot</option>
-              </select>
-            </div>
+    <main>
+      <article>
+        <section class="container">
+          <!--Spelare 1 -->
+          <div class="row mt-4">
+            <h3 class="col-12 col-md-8 col-lg-8 mx-auto">Spelare 1</h3>
           </div>
-        </div>
-        <!--Spelare 2 -->
-        <div class="row mt-4">
-          <h3 class="col-12 col-md-8 col-lg-8 mx-auto">Spelare 2</h3>
-        </div>
-        <div class="row mt-2">
-          <div class="col-12 col-md-8 col-lg-8 mx-auto d-inline-flex">
-            <div class="col-10 m-0 p-0">
-              <input type="text" class="form-control" id="playerName2" aria-label="Spelare namn" placeholder="Spelare Namn">
-            </div>
-            <div class="col-2">
-              <select class="form-control" id="type2">
-                <option>Human</option>
-                <option>Robot</option>
-              </select>
+          <div class="row mt-2">
+            <div class="col-12 col-md-8 col-lg-8 mx-auto d-inline-flex">
+              <div class="col-10 m-0 p-0">
+                <input type="text" class="form-control" id="playerName1" aria-label="Spelare namn" placeholder="Spelare Namn">
+              </div>
+              <div class="col-2">
+                <select class="form-control" id="type1">
+                  <option>Human</option>
+                  <option>Robot</option>
+                </select>
+              </div>
             </div>
           </div>
+          <!--Spelare 2 -->
+          <div class="row mt-4">
+            <h3 class="col-12 col-md-8 col-lg-8 mx-auto">Spelare 2</h3>
+          </div>
+
+          <div class="row mt-2">
+            <div class="col-12 col-md-8 col-lg-8 mx-auto d-inline-flex">
+              <div class="col-10 m-0 p-0">
+                <input type="text" class="form-control" id="playerName2" aria-label="Spelare namn" placeholder="Spelare Namn">
+              </div>
+
+              <div class="col-2">
+                <select class="form-control" id="type2">
+                  <option>Human</option>
+                  <option>Robot</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="row mt-4">
+            <div class="col-12 col-md-8 col-lg-8 mx-auto">
+              <a href="board.html" class="btn btn-primary float-left" id="btn-addPlayers">Starta Not Connected</a>
+            </div>
+          </div>
+        </section>
+      </article>
+    </main>
+
+    <footer>
+      <div class="container-fluid">
+      <div class="footer-content">
+
         </div>
+      </div>
+    </footer>
 
-        <div class="row mt-4">
-          <div class="col-12 col-md-8 col-lg-8 mx-auto">
-            <a href="board.html" class="btn btn-primary float-left" id="btn-addPlayers">Starta Not Connected</a>
-          </div>
-        </div>
-      </section>
-    </article>
-  </main>
-
- <footer class="container-fluid bg-secondary mb-0">
-
-        <div class="row col-12">
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>Adress:</p>
-            <p>Kungsgatan 88</p>
-            <p>Malmö, Sweden</p>
-          </div>
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>http://www.fourinalinegame.se</p>
-            <p>email: info@fourinalinegame.se</p>
-            <p>email: anja@fourinalinegame.se</p>
-          </div>
-
-          <div class="col-12 col-md-4 mt-2">
-            <p>Kontakt:  Anna Karlsson</p>
-            <p>Telefon:  +46(0)123456789</p>
-            <p>Mobil:    +46(0)123456789</p>
-          </div>
-          </div>
-
-
-
-  </footer>
-
-  <!-- JavaScript libraries -->
-  <script src="/jsonflex.js"></script>
-  <script src="/js/libs/jquery-3.2.1.js"></script>
-  <script src="/js/libs/popper-1.11.0.js"></script>
-  <script src="/js/libs/bootstrap-4-beta.js"></script>
-  <!-- Application specific JavaScript -->
-  <script src="/js/classes/base.class.js"></script>
-  <script src="/js/classes/frontpage.class.js"></script>
-  <script src="/js/classes/rulespage.class.js"></script>
-  <script src="/js/classes/player.class.js"></script>
-  <script src="/js/classes/board.class.js"></script>
-  <script src="/js/classes/game.class.js"></script>
-  <script src="/js/classes/hiscore.class.js"></script>
-  <script src="/js/classes/app.class.js"></script>
-  <script src="/js/main.js"></script>
-</body>
+    <!-- JavaScript libraries -->
+    <script src="/jsonflex.js"></script>
+    <script src="/js/libs/jquery-3.2.1.js"></script>
+    <script src="/js/libs/popper-1.11.0.js"></script>
+    <script src="/js/libs/bootstrap-4-beta.js"></script>
+    <!-- Application specific JavaScript -->
+    <script src="/js/classes/base.class.js"></script>
+    <script src="/js/classes/frontpage.class.js"></script>
+    <script src="/js/classes/footer.class.js"></script>
+    <script src="/js/classes/rulespage.class.js"></script>
+    <script src="/js/classes/player.class.js"></script>
+    <script src="/js/classes/board.class.js"></script>
+    <script src="/js/classes/game.class.js"></script>
+    <script src="/js/classes/hiscore.class.js"></script>
+    <script src="/js/classes/app.class.js"></script>
+    <script src="/js/main.js"></script>
+  </body>
 
 </html>
