--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
                   <a class="nav-link" href="rules.html">Spelregler</a>
                 </li>
                 <li class="nav-item pl-5">
-                  <a class="nav-link" href="hiscore.html">HiScore</a>
+                  <a class="nav-link" href="score.html">Score</a>
                 </li>
               </ul>
             </div>
@@ -84,7 +84,7 @@
     <script src="/js/classes/player.class.js"></script>
     <script src="/js/classes/game.class.js"></script>
     <script src="/js/classes/board.class.js"></script>
-    <script src="/js/classes/hiscore.class.js"></script>
+    <script src="/js/classes/score.class.js"></script>
     <script src="/js/classes/app.class.js"></script>
     <script src="/js/main.js"></script>
   </body>
