Auto stash before merge of "master" and "origin/master"

--- a/www/spel.html
+++ b/www/spel.html
@@ -89,7 +89,8 @@
 
           <div class="row mt-4">
             <div class="col-12 col-md-8 col-lg-8 mx-auto">
-              <a href="board.html" class="btn btn-primary float-left" id="btn-addPlayers">Starta Not Connected</a>
+              <a href="#" class="btn btn-primary float-left" id="btn-addPlayers">Starta</a>
+              <a href="#" class="btn btn-primary float-left ml-5" id="btn-changePlayers">change players</a>
             </div>
           </div>
         </section>
