checkPlayer lagt till, undvika spelare duplicering på spelare listan

--- a/www/spel.html
+++ b/www/spel.html
@@ -89,8 +89,7 @@
 
           <div class="row mt-4">
             <div class="col-12 col-md-8 col-lg-8 mx-auto">
-              <a href="#" class="btn btn-primary float-left" id="btn-addPlayers">Starta</a>
-              <a href="#" class="btn btn-primary float-left ml-5" id="btn-changePlayers">change players</a>
+              <a href="board.html" class="btn btn-primary float-left" id="btn-addPlayers">Starta</a>
             </div>
           </div>
         </section>
