Skapade namnlabels som visar namnet på dens tur det är

--- a/www/board.html
+++ b/www/board.html
@@ -46,16 +46,24 @@
       </div>
     </div>
   </header>
-    <main>
-      <!-- <div class="board"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
- -->
-      <div class="board-holder">
-      <div class="board">
-
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h4 class="py-2 text-center playerTurn"></h4>
+        </div>
       </div>
     </div>
+    <div class="board-holder">
+      <div class="board">
+      </div>
+    </div>
+    <!-- <div class="board"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+-->
 
-    </main>
+
+
+  </main>
     <footer>
       <div class="container-fluid">
       <div class="footer-content">
