--- a/www/board.html
+++ b/www/board.html
@@ -1,72 +1,103 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-    <title>4 i rad</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
-    <!-- Application specific CSS -->
-    <!-- <link rel="stylesheet" href="box-sizing.css"> -->
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/board.css"
+<head>
+  <title>4 i rad</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  </head>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="/css/libs/bootstrap-4-beta.css">
+  <!-- Application specific CSS -->
+  <!-- <link rel="stylesheet" href="box-sizing.css"> -->
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/board.css" </head>
+
   <body>
     <header>
-    <div class="container-fluid p-0">
-      <div class="row">
-        <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
-          <h1>4 i rad</h1>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse ml-5" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item active pl-5">
-                <a class="nav-link" href="/">Start
-                  <span class="sr-only">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="spel.html">Spela</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="rules.html">Spelregler</a>
-              </li>
-              <li class="nav-item pl-5">
-                <a class="nav-link" href="score.html">Score</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </div>
-  </header>
-  <main>
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h4 class="py-2 text-center playerTurn"></h4>
+      <div class="container-fluid p-0">
+        <div class="row">
+          <nav class="col ml-3 navbar navbar-expand-lg navbar-dark bg-secondary">
+            <h1>4 i rad</h1>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ml-5" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active pl-5">
+                  <a class="nav-link" href="/">Start
+                    <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="spel.html">Spela</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="rules.html">Spelregler</a>
+                </li>
+                <li class="nav-item pl-5">
+                  <a class="nav-link" href="score.html">Score</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
       </div>
-    </div>
-    <div class="board-holder">
-      <div class="board">
-      </div>
-    </div>
-    <!-- <div class="board"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h4 class="py-2 text-center playerTurn"></h4>
+          </div>
+        </div>
+
+        <div class="board-holder">
+          <div class="board">
+          </div>
+        </div>
+        <!-- <div class="board"><div>Icons made by <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 -->
 
 
 
-  </main>
+        <!-- Button trigger modal -->
+        <div class="col-12 text-center mt-3 mb-4">
+          <button type="button" class="btn text-white font-weight-bold cancel-button" data-toggle="modal" data-target="#exampleModal">
+            Avbryta spelet
+          </button>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <!-- <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Avbryta Spelet</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div> -->
+              <div class="modal-body my-3 font-weight-bold">
+                Vill du verkligen avbryta spelet?
+              </div>
+              <div class="modal-footer mx-3cancel-modal">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+                <button type="button" class="btn btn-primary mx-2">Ja</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+    </main>
     <footer>
       <div class="container-fluid">
-      <div class="footer-content">
+        <div class="footer-content">
 
         </div>
       </div>
@@ -91,4 +122,5 @@
     <script src="/js/classes/app.class.js"></script>
     <script src="/js/main.js"></script>
   </body>
+
 </html>
